			   XPCE ChangeLog
			   ==============

* FIXED: Bug#46: Support unicode in display->{inform,confirm}.  Dmitry.


VERSION 6.5.17, distributed with SWI-Prolog 5.5.17
==================================================

* FIXED: Bug#41: memory allocation error using Prolog terms in XPCE.
  Dmitry.

* FIXED: Bug#40: Wrong calculation of character dimensions on non-fixed
  width Unicode characters.  Dmitry.

* FIXED: Bug#39: cannot paint selected text with UNICODE characters.
  Dmitry.

* FIXED: tracing dynamic clauses holding strings.  Steve Moyle.

* FIXED: PceEmacs colouring: removed load_files/1 spec (error).  Cross
  referencer: deal properly with meta predicates with unknown goal.


VERSION 6.5.16, distributed with SWI-Prolog 5.5.16
==================================================

* FIXED: Bug#36: text->insert_self for characters > 255.  Dmitry.

* FIXED: Bug#33: editor->typed.  By default bind unicode characters to
  ->insert_self.  Dmitry.

* FIXED: char_array<-append: support wide characters.


VERSION 6.5.15, distributed with SWI-Prolog 5.5.15
==================================================

* PORT: Fixed visibility attribute issues on IA64.  These problems may
  have affected more GCC/ELF platforms.  With help from Stefan Dirsch.

* FIXED: XPCE httpd regex for breaking the header.

* FIXED: regex definitions is ispell demo (also used by PceEmacs
  M-x ispell).

* PORT: Some of the GCC 4.0 issues: handling names, visibility attribute,
  illegal lvalues in DND interface. Work with Stefan Dirsch from SuSE
  preparing for the next SuSE release.


VERSION 6.5.14, distributed with SWI-Prolog 5.5.14
==================================================

* ADDED: allow for rules for the multifile predicate
  emacs_prolog_colours:style/2 to define personal colour preference. 
  Steve Moyle.


VERSION 6.5.13, distributed with SWI-Prolog 5.5.13
==================================================

* PORT: remove regex debugging code, as it fails to compile on some